k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastify-auth-service
  labels:
    app: fastify-auth-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: fastify-auth-service
